fix: UI: Tab close button not showing on active tabs http://bugs.activestate.com/show_bug.cgi?id=100023
(integrated from komodo (trunk) change 81451 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13459 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/mac/_config/icons.less
@@ -9,7 +9,7 @@
 @icon-new-project:              @icon-project;
 
 /* Tab Icons */
-@icon-tab-close-button:         none;
+@icon-tab-close-button:         disabled;
 
 /* Global icons */
 @icon-warning:                  url("chrome://global/skin/icons/warning-large.png");
